# Mailling-app

./: README.md  groups.json  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0003_alter_blogpost_options_blogpost_user.py
blog/templates/blog/: blogpost_list.html
client/: models.py  urls.py  views.py
client/templates/client/: base.html  client_confirm_delete.html  client_detail.html  client_list.html
config/: settings.py  urls.py
mailing/: models.py  services.py  urls.py  views.py
mailing/templates/mailing/: home.html  mailingmessage_confirm_delete.html  mailingmessage_detail.html  mailingmessage_form.html  mailingmessage_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html  mailingstatus_list.html
